# libartnet

./: .gitignore  AUTHORS  BUGS  CMAKE_BUILD.md  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.debian  config.h.cmake.in  config.h.in  configure.ac  configure.in  debian-preinstall.sh  libartnet.pc.cmake  libartnet.pc.in  reconf
artnet/: CMakeLists.txt  Makefile.am  artnet.c  artnet.h  common.h  errors.h  misc.c  misc.h  network.c  packets.h  private.h  receive.c  tod.c  tod.h  transmit.c
cmake/: libartnetConfig.cmake.in
debian/: Makefile.am  rules  shlibs.libartnet1
msvc/libartnet/: libartnet.sln  libartnet.vcxproj
